--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,25 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 14px;
+    float:left;
+    width: 100%;
+    background-color: hsla(47, 18%, 76%, 0.9);
+}
+
+header {
+    text-align: center;
+    padding: 15px;
+}
+
+.flamepepperimg {
+    opacity: 0.7;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    
 }
 
 .textorange {
-    color: hsla(13, 87%, 48%, 0.84);
-    
-
+    color: orangered
 
 }
