--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,16 +10,31 @@ header {
     text-align: center;
     padding: 15px;
 }
-
-.flamepepperimg {
-    opacity: 0.7;
-    position: absolute;
-    width: 100%;
-    height: 100%;
     
+.bgimage {
+    background-image: url("../images/flamingPepper.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 .textorange {
     color: orangered
 
+}
+
+.wordbox {
+    text-decoration-line: underline;
+    font-size: 16px;
+    letter-spacing: 1em;
+    margin-top: 10%;
+    margin-bottom: 20%;
+    margin-right: 45%;
+    margin-left: 5%;
+    padding: 10%;
+    border: 2px solid gray;
+}
+
+.list-group-item.active {
+    background-color: red;
 }
